// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: loaded 1`] = `
<div
  className="page page-limited"
  id="project-dump"
>
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      project_dump.page
    </h1>
    <div
      className="page-description"
    >
      project_dump.page.description
    </div>
  </header>
  <div
    className="columns"
  >
    <div
      className="column-half"
    >
      <Export
        componentKey="my-project"
        loadStatus={[Function]}
        status={{}}
        task={
          {
            "executedAt": "2020-03-12T12:22:20Z",
            "startedAt": "2020-03-12T12:20:20Z",
            "status": "SUCCESS",
            "submittedAt": "2020-03-12T12:15:20Z",
          }
        }
      />
    </div>
    <div
      className="column-half"
    >
      <Import
        analysis={
          {
            "executedAt": "2020-03-12T12:22:20Z",
            "startedAt": "2020-03-12T12:20:20Z",
            "status": "SUCCESS",
            "submittedAt": "2020-03-12T12:15:20Z",
          }
        }
        componentKey="my-project"
        importEnabled={true}
        loadStatus={[Function]}
        status={{}}
        task={
          {
            "executedAt": "2020-03-12T12:22:20Z",
            "startedAt": "2020-03-12T12:20:20Z",
            "status": "SUCCESS",
            "submittedAt": "2020-03-12T12:15:20Z",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly: loaded without import 1`] = `
<div
  className="page page-limited"
  id="project-dump"
>
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      project_dump.page
    </h1>
    <div
      className="page-description"
    >
      project_dump.page.description_without_import
    </div>
  </header>
  <div
    className="columns"
  >
    <div
      className="column-half"
    >
      <Export
        componentKey="my-project"
        loadStatus={[Function]}
        status={{}}
      />
    </div>
    <div
      className="column-half"
    >
      <Import
        componentKey="my-project"
        importEnabled={false}
        loadStatus={[Function]}
        status={{}}
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly: loading 1`] = `
<div
  className="page page-limited"
  id="project-dump"
>
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      project_dump.page
    </h1>
    <div
      className="page-description"
    >
      project_dump.page.description
    </div>
  </header>
  <i
    className="spinner"
  />
</div>
`;
